Styling fix to remove scrollbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@ body {
   padding-left: 3%;
   padding-right: 3%;
   padding-bottom: 3%;
-  height: calc(95%);
+  height: 90%;
 }
 
 #mainContent {
@@ -54,4 +54,3 @@ body {
     padding: auto;
   }
 }
-
